Kubernetes/frontend-deployment.yaml
# ============================================================
# Deployment — Angular Frontend (Nginx)
# ============================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: employee-app
  labels:
    app.kubernetes.io/name: employee-management-system
    app.kubernetes.io/component: frontend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        app.kubernetes.io/name: employee-management-system
        app.kubernetes.io/component: frontend
    spec:
      containers:
        - name: frontend
          image: syedbilal47/frontend:v1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          # Override the baked-in nginx.conf with the K8s ConfigMap (else chnage the backend url in the nginx.config from backend:8080 backend-service:8080)
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          # Liveness: restart if Nginx stops responding
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          # Readiness: accept traffic only when Nginx is serving
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: nginx-config
          configMap:
            name: frontend-nginx-config
      # Optionally pull images from a private registry:
      # imagePullSecrets:
      #   - name: regcred
